--- a/firstapp/templates/dashboard.html
+++ b/firstapp/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-  <title>WELCOME TO INDEX</title>
+  <title>WELCOME TO DASHBOARD</title>
 {% endblock %}
 
 {% block extra_css %}
@@ -12,6 +12,6 @@
 {% block content %}
   <div class="col-sm-10 dashboard-content">
     <h1>THIS IS MY DASHBOARD</h1>
-    <h3>HELLO TO MY INDEX</h3>
+    <h3>HELLO TO MY DASHBOARD</h3>
   </div>
 {% endblock %}
