--- a/firstapp/templates/login/login_base.html
+++ b/firstapp/templates/login/login_base.html
@@ -6,14 +6,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" 
           content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     {%block title%}
       <title>Login Form</title>
     {%endblock%}
 </head>
 
 <body>
-    {%block content%}
-    {%endblock%}
+  {% block content %}{% endblock %}
+
+  {% block extra_js %}{% endblock %}
 </body>
+
+
 </html>
